--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="asset/css/style.css" />
   </head>
   <body>
@@ -93,9 +97,70 @@
 
       <!-- Your main page content goes here -->
       <main style="padding: 80px 20px 20px 20px">
-        <h1>Welcome to ONNOTOMO Portfolio Management System</h1>
-        <p>Your main content goes here.</p>
-        <!-- Add more content as needed -->
+        <div class="row">
+          <div class="col-md-8">
+            <div class="user-post">
+              <div class="card shadow-sm">
+                <div class="card-body">
+                  <div class="d-flex align-items-center">
+                    <div class="user-post-icon">
+                      <i class="fa-regular fa-user"></i>
+                    </div>
+                    <div class="form-group flex-grow-1">
+                      <textarea
+                        name="postContent"
+                        id="postContent"
+                        class="form-control"
+                        rows="3"
+                        placeholder="What's on your mind?"
+                      ></textarea>
+                    </div>
+                  </div>
+                  <hr />
+                  <div class="upload-options">
+                    <!-- Upload Image Option -->
+                    <div
+                      class="upload-option upload-image"
+                      data-bs-toggle="modal"
+                      data-bs-target="#uploadModal"
+                      data-type="image"
+                    >
+                      <i class="fa-solid fa-image"></i>
+                      <span>Image</span>
+                    </div>
+
+                    <!-- Upload Video Option -->
+                    <div
+                      class="upload-option upload-video"
+                      data-bs-toggle="modal"
+                      data-bs-target="#uploadModal"
+                      data-type="video"
+                    >
+                      <i class="fa-solid fa-video"></i>
+                      <span>Video</span>
+                    </div>
+
+                    <!-- Feeling Option -->
+                    <div
+                      class="upload-option upload-feeling"
+                      data-bs-toggle="modal"
+                      data-bs-target="#uploadModal"
+                      data-type="feeling"
+                    >
+                      <i class="fa-regular fa-face-smile"></i>
+                      <span>Feeling</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <h1>Welcome to ONNOTOMO Portfolio Management System</h1>
+            <p>Your main content goes here.</p>
+          </div>
+          <div class="col-md-4">
+            <h4>Side Bar</h4>
+          </div>
+        </div>
       </main>
     </div>
 
@@ -121,7 +186,114 @@
       </ul>
     </aside>
 
+    <div
+      class="modal fade"
+      id="uploadModal"
+      tabindex="-1"
+      aria-labelledby="uploadModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="uploadModalLabel">Upload</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <!-- Dynamic Content Will Be Injected Here -->
+            <form id="uploadForm">
+              <div class="custom-select-wrapper">
+                <div class="custom-select">
+                  <div class="select-trigger">
+                    <span>Select Feeling</span>
+                    <i class="fa fa-caret-down"></i>
+                  </div>
+                  <div class="custom-options">
+                    <span class="custom-option" data-value="happy">
+                      <i class="fa-regular fa-face-grin-hearts"></i> Happy
+                    </span>
+                    <span class="custom-option" data-value="sad">
+                      <i class="fa-regular fa-face-frown"></i> Sad
+                    </span>
+                    <span class="custom-option" data-value="angry">
+                      <i class="fa-solid fa-face-angry"></i> Angry
+                    </span>
+                    <span class="custom-option" data-value="hungry">
+                      <i class="fa-solid fa-utensils"></i> Hungry
+                    </span>
+                    <span class="custom-option" data-value="excited">
+                      <i class="fa-solid fa-face-surprise"></i> Excited
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="mb-3">
+                <textarea
+                  name="modalPostContent"
+                  id="modalPostContent"
+                  class="form-control"
+                  rows="3"
+                  placeholder="What's on your mind?"
+                ></textarea>
+              </div>
+              <div id="modalUploadArea" class="drag-drop-area">
+                <p style="text-align: center">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-primary mt-3"
+                    id="browseButton"
+                  >
+                    <i class="fa-solid fa-upload"></i>
+                  </button>
+                </p>
+                <p style="text-align: center">
+                  Drag & Drop files here or click to upload
+                </p>
+                <input type="file" id="fileInput" style="display: none" />
+                <div id="previewContainer"></div>
+              </div>
+
+              <hr />
+              <button
+                style="width: 100%"
+                type="button"
+                class="btn btn-sm btn-primary"
+                id="modalActionButton"
+              >
+                Post
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="asset/js/style.js"></script>
+
+    <script>
+      document
+        .querySelector(".select-trigger")
+        .addEventListener("click", function () {
+          this.closest(".custom-select").classList.toggle("open");
+        });
+
+      document.querySelectorAll(".custom-option").forEach((option) => {
+        option.addEventListener("click", function () {
+          const selectTrigger = this.closest(".custom-select").querySelector(
+            ".select-trigger span"
+          );
+          selectTrigger.textContent = this.textContent;
+          this.closest(".custom-select").classList.remove("open");
+        });
+      });
+    </script>
   </body>
 </html>
