working on user interface

--- a/index.html
+++ b/index.html
@@ -154,8 +154,92 @@
                 </div>
               </div>
             </div>
-            <h1>Welcome to ONNOTOMO Portfolio Management System</h1>
-            <p>Your main content goes here.</p>
+
+            <div class="equity-page mt-2">
+              <div class="card">
+                <p style="margin-top: 5px">
+                  বর্তমানে শেয়ার বাজারে আপনার বিনিয়োগ কত টাকা...?
+                </p>
+                <p>&#x9F3; 10000.00</p>
+                <p>
+                  <button class="btn btn-sm btn-info">Add Equity</button>
+                </p>
+              </div>
+            </div>
+
+            <div id="content" class="content-page mt-2">
+              <div class="card">
+                <div class="card-header">
+                  <div
+                    style="
+                      display: flex;
+                      justify-content: space-between;
+                      align-items: center;
+                    "
+                  >
+                    <div class="d-flex">
+                      <div>
+                        <img
+                          style="width: 40px; height: 40px; border-radius: 50%"
+                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDKh7tKIyhZWaZqRFmYkPPnbeNqAf4S7eUew&s"
+                          alt=""
+                        />
+                      </div>
+                      <div class="news-info">
+                        <h4>ONNOTOMO <span>shared a news</span></h4>
+                        <span>1 min ago</span>
+                      </div>
+                    </div>
+                    <div>
+                      <i class="fa-solid fa-ellipsis"></i>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="card-body">
+                  <div class="news-description">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Officia nam ipsa odio quaerat modi labore consectetur
+                      fugiat accusamus suscipit autem!
+                    </p>
+                  </div>
+
+                  <div class="news-media">
+                    <img
+                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvb9-3Rs5HNT7MN4ePjf6Y0mXL-Xz_wjkD2g&s"
+                      alt=""
+                    />
+                  </div>
+                </div>
+                <div class="card-footer">
+                  <div
+                    style="
+                      display: flex;
+                      justify-content: space-between;
+                      align-items: center;
+                    "
+                  >
+                    <div style="display: flex; align-items: center">
+                      <div style="margin-right: 20px">
+                        <i class="fa-solid fa-heart"></i>
+                        100
+                      </div>
+                      <div>
+                        <i class="fa-solid fa-comment"></i>
+                        100
+                      </div>
+                    </div>
+                    <div>
+                      <div>
+                        <i class="fa-solid fa-eye"></i>
+                        100
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-md-4">
             <h4>Side Bar</h4>
