working on design

--- a/index.html
+++ b/index.html
@@ -199,176 +199,138 @@
               </div>
             </div>
 
-            <div class="equity-page mt-2">
-              <div class="card">
-                <p style="margin-top: 5px">
-                  বর্তমানে শেয়ার বাজারে আপনার বিনিয়োগ কত টাকা...?
-                </p>
-                <p>&#x9F3; 10000.00</p>
-                <p>
-                  <button class="btn btn-sm btn-info">Add Equity</button>
-                </p>
-              </div>
-            </div>
-
             <div id="content" class="content-page mt-2">
-              <div class="card">
-                <div class="card-header">
-                  <div
-                    style="
-                      display: flex;
-                      justify-content: space-between;
-                      align-items: center;
-                    "
-                  >
-                    <div class="d-flex">
-                      <div>
-                        <img
-                          style="width: 40px; height: 40px; border-radius: 50%"
-                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDKh7tKIyhZWaZqRFmYkPPnbeNqAf4S7eUew&s"
-                          alt=""
-                        />
-                      </div>
-                      <div class="news-info">
-                        <h4>ONNOTOMO <span>shared a news</span></h4>
-                        <span>1 min ago</span>
-                      </div>
-                    </div>
-                    <div>
-                      <i class="fa-solid fa-ellipsis"></i>
-                    </div>
-                  </div>
-                </div>
+              <h3>Cricket ScoreCard</h3>
 
-                <div class="card-body">
-                  <div class="news-description">
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Officia nam ipsa odio quaerat modi labore consectetur
-                      fugiat accusamus suscipit autem!
-                    </p>
+              <div class="scorecard">
+                <table class="score-table">
+                  <thead>
+                    <tr>
+                      <th>Batsman</th>
+                      <th>R</th>
+                      <th>B</th>
+                      <th>4s</th>
+                      <th>6s</th>
+                      <th>SR</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Player 1</td>
+                      <td>45</td>
+                      <td>38</td>
+                      <td>6</td>
+                      <td>1</td>
+                      <td>118.42</td>
+                    </tr>
+                    <tr>
+                      <td>Player 2</td>
+                      <td>30</td>
+                      <td>28</td>
+                      <td>3</td>
+                      <td>0</td>
+                      <td>107.14</td>
+                    </tr>
+                    <tr>
+                      <td>Player 3</td>
+                      <td>60</td>
+                      <td>40</td>
+                      <td>8</td>
+                      <td>2</td>
+                      <td>150.00</td>
+                    </tr>
+                    <tr>
+                      <td>Player 4</td>
+                      <td>10</td>
+                      <td>12</td>
+                      <td>1</td>
+                      <td>0</td>
+                      <td>83.33</td>
+                    </tr>
+                    <!-- Add more players if needed -->
+                  </tbody>
+                </table>
 
-                    <a
-                      href="#"
-                      style="
-                        background-color: transparent;
-                        border: none;
-                        margin-top: 10px;
-                        color: teal;
-                        font-size: 13px;
-                      "
-                      >Read More</a
-                    >
-                  </div>
-
-                  <div class="news-media">
-                    <img
-                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvb9-3Rs5HNT7MN4ePjf6Y0mXL-Xz_wjkD2g&s"
-                      alt=""
-                    />
-                  </div>
-                </div>
-                <div class="card-footer">
-                  <div
-                    style="
-                      display: flex;
-                      justify-content: space-between;
-                      align-items: center;
-                    "
-                  >
-                    <div style="display: flex; align-items: center">
-                      <div style="margin-right: 20px">
-                        <i class="fa-solid fa-heart"></i>
-                        100
-                      </div>
-                      <div>
-                        <i class="fa-solid fa-comment"></i>
-                        100
-                      </div>
-                    </div>
-                    <div>
-                      <div>
-                        <i class="fa-solid fa-eye"></i>
-                        100
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card mt-2">
-                <div class="card-header">
-                  <div
-                    style="
-                      display: flex;
-                      justify-content: space-between;
-                      align-items: center;
-                    "
-                  >
-                    <div class="d-flex">
-                      <div>
-                        <img
-                          style="width: 40px; height: 40px; border-radius: 50%"
-                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDKh7tKIyhZWaZqRFmYkPPnbeNqAf4S7eUew&s"
-                          alt=""
-                        />
-                      </div>
-                      <div class="news-info">
-                        <h4>
-                          ONNOTOMO
-                          <span>shared <a href="">অর্থসূচক</a> news</span>
-                        </h4>
-                        <span>1 min ago</span>
-                      </div>
-                    </div>
-                    <div>
-                      <i class="fa-solid fa-ellipsis"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-body">
-                  <div class="news-description">
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Officia nam ipsa odio quaerat modi labore consectetur
-                      fugiat accusamus suscipit autem!
-                    </p>
-                  </div>
-
-                  <a
-                    href="#"
-                    style="
-                      background-color: transparent;
-                      border: none;
-                      margin-top: 10px;
-                      color: teal;
-                      font-size: 13px;
-                    "
-                    >Read More</a
-                  >
-                </div>
-                <div class="card-footer">
-                  <div
-                    class="d-flex align-items-center justify-content-between"
-                  >
-                    <div class="news-footer-info">
-                      <p>origin: arthosuchok</p>
-                      <p>content : Read</p>
-                    </div>
-                    <div>
-                      <a href="" class="btn btn-sm btn-info">
-                        <i class="fa-brands fa-facebook"></i>
-                      </a>
-                      <a href="" class="btn btn-sm btn-info">
-                        <i class="fa-brands fa-twitter"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>
+                <table class="score-summary">
+                  <thead>
+                    <tr>
+                      <th>Bowler</th>
+                      <th>O</th>
+                      <th>M</th>
+                      <th>R</th>
+                      <th>W</th>
+                      <th>ER</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Bowler 1</td>
+                      <td>4</td>
+                      <td>0</td>
+                      <td>25</td>
+                      <td>1</td>
+                      <td>6.25</td>
+                    </tr>
+                    <tr>
+                      <td>Bowler 2</td>
+                      <td>3.5</td>
+                      <td>1</td>
+                      <td>22</td>
+                      <td>2</td>
+                      <td>5.74</td>
+                    </tr>
+                    <tr>
+                      <td>Bowler 3</td>
+                      <td>4</td>
+                      <td>0</td>
+                      <td>30</td>
+                      <td>1</td>
+                      <td>7.50</td>
+                    </tr>
+                    <!-- Add more bowlers if needed -->
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <h4>Side Bar</h4>
+            <div class="side-bar-content">
+              <div class="fixture">
+                <div class="fixture-header">
+                  <h3>Cricket Fixture</h3>
+                </div>
+                <div class="fixture-item">
+                  <div class="team team-a">
+                    <img src="team-a-logo.png" alt="" />
+                    <span>AUS</span>
+                  </div>
+                  <div class="fixture-details">
+                    <span class="match-date">October 10, 2024</span>
+                    <span class="vs">VS</span>
+                    <span class="match-time">3:00 PM</span>
+                  </div>
+                  <div class="team team-b">
+                    <img src="team-b-logo.png" alt="" />
+                    <span>IND</span>
+                  </div>
+                </div>
+                <div class="fixture-item">
+                  <div class="team team-a">
+                    <img src="team-a-logo.png" alt="" />
+                    <span>AUS</span>
+                  </div>
+                  <div class="fixture-details">
+                    <span class="match-date">October 10, 2024</span>
+                    <span class="vs">VS</span>
+                    <span class="match-time">3:00 PM</span>
+                  </div>
+                  <div class="team team-b">
+                    <img src="team-b-logo.png" alt="" />
+                    <span>IND</span>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </main>
